# securechain-auth

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  template.env
.github/workflows/: github-release.yml  lint-test.yml  py-analisys.yml  release.yml
app/: config.py  constants.py  database.py  exception_handler.py  logger.py  main.py  router.py  settings.py
app/controllers/: __init__.py  api_key_controller.py  auth_controller.py  health_controller.py  user_controller.py
app/exceptions/: __init__.py  api_key_name_exists_exception.py  exceptions.py  expired_token_exception.py  invalid_token_exception.py  not_authenticated_exception.py
app/models/auth/: RevokedToken.py  User.py  __init__.py  api_key.py  change_password.py  revoked_token.py  user.py  verify_token.py
app/schemas/auth/: __init__.py  account_exists_request.py  change_password_request.py  create_api_key_request.py  login_request.py  signup_request.py  verify_token_request.py
app/schemas/validators/: password_validator.py
app/services/: __init__.py  api_key_service.py  auth_service.py  user_service.py
app/utils/: __init__.py  apikey_bearer.py  json_encoder.py  jwt_bearer.py  jwt_encoder.py  password_encoder.py
dev/: Dockerfile  docker-compose.yml
tests/: conftest.py  requirements-dev.txt
tests/controllers/: test_auth_controller.py  test_health_controller.py
tests/integration/: test_api_integration.py
tests/models/: test_revoked_token_model.py  test_user_model.py
tests/services/: test_auth_service.py
(+12 files in other folders)
