[project]
name = "securechain-auth"
version = "1.0.19"
description = "A simple user registry backend for Secure Chain tools"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "email-validator==2.2.0",
    "pydantic-settings==2.10.1",
    "apscheduler==3.11.0",
    "odmantic==1.0.2",
    "neo4j==5.28.1",
    "python-dotenv==1.1.1",
    "python-dateutil==2.9.0",
    "passlib==1.7.4",
    "pyjwt==2.10.1",
    "bcrypt==4.3.0",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "httpx==0.28.1",
    "ruff==0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
exclude = ["tests*", "dev*"]

[tool.hatch.build.targets.sdist]
exclude = ["tests*", "dev*"]

[tool.ruff.lint]
select = [
    "A",   # prevent using keywords that clobber python builtins
    "B",   # bugbear: security warnings
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF"  # the ruff developer's own rules
]

ignore = [
    "E501",  # Suppress line-too-long warnings: trust black's judgement on this one
    "C901",  # Complex structure
    "A004",  # Module attribute shadowing
]
